<resources>
    <string name="app_name">ExploraZGZ</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="recuperar_contrae_a">Recuperar contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="introduzca_el_correo">Introduzca el Correo</string>
    <string name="explora_zgz">Explora ZGZ</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="acceder_usuario">ACCEDER USUARIO</string>
    <string name="dificultad_de_la_partida">Dificultad de la Partida</string>
    <string name="_5_ubicaciones">5 Ubicaciones</string>
    <string name="_10_ubicaciones">10 Ubicaciones</string>
    <string name="_15_ubicaciones">15 Ubicaciones</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirma_contrase_a">Confirma Contraseña</string>
    <string name="tipo">Tipo:</string>
    <string name="pista">Pista:</string>
    <string name="monumento_sorpresa">monumento sorpresa</string>
    <string name="comprobar">Comprobar</string>
</resources>
