<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dificultad_de_la_partida"
        android:id="@+id/lbl_dif"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_ubicaciones"
        android:id="@+id/btn_5u"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_ubicaciones"
        android:id="@+id/btn_10u"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_ubicaciones"
        android:id="@+id/btn_15u"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />
</LinearLayout>