<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:contextClickable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_pass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_user"
        android:layout_marginTop="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/lbl_pass"
        android:layout_above="@+id/txt_pass"
        android:layout_alignStart="@+id/txt_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usuario"
        android:id="@+id/lbl_user"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_user" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/btn_entrar"
        android:layout_below="@+id/txt_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/olvidaste_la_contrase_a"
        android:id="@+id/lbl_olvpass"
        android:layout_below="@+id/btn_entrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:contextClickable="true"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true" />

</RelativeLayout>