<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:contextClickable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_pass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_correo"
        android:layout_marginTop="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contrase_a"
        android:id="@+id/lbl_pass"
        android:layout_above="@+id/txt_pass"
        android:layout_alignStart="@+id/txt_pass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/correo"
        android:id="@+id/lbl_correo"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt_correo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:id="@+id/btn_registrarse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirma_contrase_a"
        android:id="@+id/lbl_conpass"
        android:layout_below="@+id/txt_pass"
        android:layout_alignStart="@+id/txt_pass"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_conpass"
        android:layout_below="@+id/lbl_conpass"
        android:layout_alignLeft="@+id/txt_pass" />

</RelativeLayout>